feat: implement estoque e movimentacao com controle transacional