@@ -1,36 +1,67 @@
 package com.seuusuario.pos.service;
 
-import java.security.Key;
-
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.stereotype.Service;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
-
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 
 import java.security.Key;
 import java.util.Date;
-import java.util.stream.Collectors; // Se usar o collect(Collectors.toList())
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class JwtService {
-    @Value("${security.jwt.secret}") private String secret; // base64
-    @Value("${security.jwt.access-ttl-seconds}") private long accessTtl;
-    @Value("${security.jwt.refresh-ttl-seconds}") private long refreshTtl;
 
-    private Key key() { return Keys.hmacShaKeyFor(Decoders.BASE64.decode(secret)); }
+    @Value("${security.jwt.secret}") 
+    private String secret;
+    
+    @Value("${security.jwt.access-ttl-seconds}") 
+    private long accessTtl;
+    
+    @Value("${security.jwt.refresh-ttl-seconds}") 
+    private long refreshTtl;
+
+    private Key key() { 
+        return Keys.hmacShaKeyFor(Decoders.BASE64.decode(secret)); 
+    }
+
+    public List<SimpleGrantedAuthority> extractAuthorities(String token) {
+        Claims claims = extractAllClaims(token);
+        List<?> roles = claims.get("roles", List.class); 
+        if (roles == null) return List.of();
+        
+        return roles.stream()
+                .map(role -> {
+                    String r = role.toString();
+                    // Remove ROLE_ se já existir para não duplicar
+                    if (r.startsWith("ROLE_")) {
+                        r = r.substring(5);
+                    }
+                    return new SimpleGrantedAuthority("ROLE_" + r);
+                })
+                .collect(Collectors.toList());
+    }
+
+   
+    private Claims extractAllClaims(String token) {
+        return Jwts.parserBuilder()
+                .setSigningKey(key())
+                .build()
+                .parseClaimsJws(token)
+                .getBody();
+    }
 
     public String generateAccessToken(UserDetails user) {
         return Jwts.builder()
             .setSubject(user.getUsername())
-            .claim("roles", user.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList())
+            .claim("roles", user.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()))
             .setIssuedAt(new Date())
             .setExpiration(new Date(System.currentTimeMillis() + accessTtl * 1000))
             .signWith(key(), SignatureAlgorithm.HS256)
@@ -47,8 +78,7 @@ public class JwtService {
     }
 
     public String extractUsername(String token) {
-        return Jwts.parserBuilder().setSigningKey(key()).build()
-            .parseClaimsJws(token).getBody().getSubject();
+        return extractAllClaims(token).getSubject();
     }
 
     public boolean isValid(String token, UserDetails user) {
@@ -57,8 +87,6 @@ public class JwtService {
     }
 
     private boolean isExpired(String token) {
-        Date exp = Jwts.parserBuilder().setSigningKey(key()).build()
-            .parseClaimsJws(token).getBody().getExpiration();
-        return exp.before(new Date());
+        return extractAllClaims(token).getExpiration().before(new Date());
     }
 }
